<resources>
    <string name="app_name">MyNewBook</string>
    <string name="most_rated">Most Rated</string>
    <string name="new_added">New Added</string>
    <string name="my_favorites">My Favorites</string>
    <string name="book_name">Book Name</string>
    <string name="novelist">Novelist</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="save_my_vote">save my vote</string>
    <string name="my_new_book_for_toolbar">My New Book</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="desc">Image</string>
    <string name="add_favorite">Favorite Button</string>
    <string name="add_save">Save Button</string>
    <string name="saved">Saved Button</string>
    <string name="deneme">deneme</string>
    <string name="selectImage">selectImage</string>






</resources>
