<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabSelectedTextColor="@android:color/darker_gray"
        app:tabIndicatorColor="@color/colorPrimaryDark">

        <android.support.design.widget.TabItem
            android:id="@+id/newAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_added"/>

        <android.support.design.widget.TabItem
            android:id="@+id/mostRated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_rated"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myFavorites"
            android:text="@string/my_favorites"
            />


    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabs" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pager"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="#115A54"
        app:srcCompat="@android:drawable/ic_input_add" />

</RelativeLayout>