<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonActivity">
<ImageView
        android:id="@+id/selectImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/selectimage"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="54dp"
        android:onClick="selectImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent" />    " /><EditText
        android:id="@+id/bookNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/book_name"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="343dp"
        android:layout_below="@id/selectImageView"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/selectImageView"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintEnd_toEndOf="@+id/selectImageView" />
    <EditText
        android:id="@+id/novelistEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookNameEditText"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/novelist"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="413dp"
        app:layout_constraintStart_toStartOf="@+id/bookNameEditText"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/bookNameEditText" />
        " />
    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/novelistEditText"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/comment"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="485dp"
        app:layout_constraintStart_toStartOf="@+id/novelistEditText"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/novelistEditText"/>
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="Save"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="645dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="38dp"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>